--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4.2.4"
 csv = "1.2.1"
 serde = "1.0.160"
 serde_json = "1.0.96"
+
+[dependencies.clap]
+version = "4.2.4"
+features = ["derive"]
