--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 csv = "1.2.1"
 serde = "1.0.160"
 serde_json = "1.0.96"
+tabled = "0.12.0"
 
 [dependencies.clap]
 version = "4.2.4"
