--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,12 @@ edition = "2021"
 csv = "1.2.1"
 format_num = "0.1.0"
 itertools = "0.10.5"
-serde = "1.0.160"
 serde_json = "1.0.96"
 tabled = "0.12.0"
+
+[dependencies.serde]
+version = "1"
+features = ["derive"]
 
 [dependencies.clap]
 version = "4.2.4"
