--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,9 @@ edition = "2021"
 csv = "1.2"
 format_num = "0.1"
 itertools = "0.10"
+serde = "1"
 serde_json = "1.0"
 tabled = "0.12"
-
-[dependencies.serde]
-version = "1"
-features = ["derive"]
 
 [dependencies.clap]
 version = "4"
