--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 csv = "1.2"
 format_num = "0.1"
 itertools = "0.10"
+lazy_static = "1.4.0"
+regex = "1.8.1"
 serde = "1"
 serde_json = "1.0"
 tabled = "0.12"
