--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ csv = "1.2"
 format_num = "0.1"
 itertools = "0.10"
 lazy_static = "1.4.0"
+paris = "1.5.15"
 regex = "1.8.1"
 serde = "1"
 serde_json = "1.0"
